force-app/main/default/objects/UploadQueue__c/UploadQueue__c.object-meta.xml
<CustomObject>
    <label>UploadQueue</label>
    <nameField>
        <label>Upload Queue record</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UploadQueue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>