force-app/main/default/objects/UploadQueue__c/fields/ObjectId__c.field-meta.xml
<CustomField>
    <fullName>ObjectId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>ObjectId</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Account_committed_changes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>