force-app/main/default/objects/UploadQueue__c/fields/ObjectType__c.field-meta.xml
<CustomField>
    <fullName>ObjectType__c</fullName>
    <label>ObjectType</label>
    <type>TextArea</type>
</CustomField>