force-app/main/default/objects/UploadQueue__c/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <label>Recipient</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>